# blockhain-core

./: .gitignore  Cargo.toml  README.md  build.rs  test_sn.rs  validator.key
docs/book/: README.md  SUMMARY.md  ch01_01_blocks.md  ch01_02_transactions.md  ch01_03_account_state.md  ch02_01_signatures.md  ch02_02_merkle_trees.md  ch03_03_pos.md  ch03_04_poa.md  ch03_05_finality.md  ch03_06_qc.md  ch03_consensus.md  ch04_01_node.md  ch04_02_peer_manager.md  ch04_03_protocol.md  ch05_01_storage.md  ch05_02_mempool.md  ch05_03_snapshots.md  ch05_storage.md
proto/: protocol.proto
src/: account.rs  block.rs  blockchain.rs  chain_config.rs  cli.rs  crypto.rs  encoding.rs  genesis.rs  hash.rs  integration_tests.rs  main.rs  mempool.rs  slashing.rs  snapshot.rs  storage.rs  transaction.rs
src/consensus/: finality.rs  mod.rs  poa.rs  pos.rs  pow.rs  qc.rs
src/network/: mod.rs  node.rs  peer_manager.rs  proto_bridge.rs  proto_conversions.rs  protocol.rs
